# log-latency-profiler

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: usage.md
examples/: sample.jsonl
src/log_latency_profiler/: __init__.py  analyzer.py  cli.py  models.py  parser.py  render.py
tests/: test_analyzer.py  test_cli.py  test_parser.py
